Transition to new site-specific configuration mechanism
`local-configs`, `local-sources` and `local-templates` mechanism is
replaced with new one. Libraries installed this way are no longer
used, so they are commented out, but left in the file to illustrate
the idea and re-implemnt that logic later.

There is a pseudo-hook placed now for site-specific
`site-config/site-generic.el` file to be loaded when present.

Additionally, gitignore is improved.

--- a/.gitignore
+++ b/.gitignore
@@ -17,13 +17,19 @@ customize.el
 /auto-save-list/
 /.backup/
 
+# Tree-sitter
+/tree-sitter
+
 # Cache files and settings for packages
+/eln-cache
+/transient
 /.python-environments
 /anaconda-mode
 /ac-comphist.dat
 /tutorial/
 /.mc-lists.el
 /smex-items
+/amx-items
 /bookmarks
 /history
 /ido.last*
